# SplitVibe-Rust-v2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/hooks/: lint-clippy.sh
.claude/skills/implement/: SKILL.md
.claude/skills/validate-pr/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
crates/splitvibe-core/: Cargo.toml
crates/splitvibe-core/src/: balance.rs  lib.rs  models.rs  split.rs  validation.rs
crates/splitvibe-db/: Cargo.toml
crates/splitvibe-db/migrations/: 20260312000001_initial_schema.sql  20260312000002_settlement_deleted_at.sql
crates/splitvibe-db/src/: lib.rs  models.rs  queries.rs
crates/splitvibe-db/tests/: expense_tests.rs  group_tests.rs  migration_tests.rs  settlement_tests.rs
crates/splitvibe-server/: Cargo.toml
crates/splitvibe-server/src/: app.rs  lib.rs  main.rs
crates/splitvibe-server/src/auth/: handlers.rs  mod.rs  session.rs
crates/splitvibe-server/src/components/: navbar.rs
crates/splitvibe-server/src/groups/: handlers.rs  mod.rs
crates/splitvibe-server/src/pages/: groups.rs  home.rs  login.rs  mod.rs  not_found.rs
crates/splitvibe-server/style/: main.css
docs/: backlog.md  plan.md  spec.md  tech.md
infra/: main.bicep
