[package]
name = "splitvibe-db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "rust_decimal", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
rust_decimal_macros = "1"
chrono = "0.4"
serial_test = "3"
