[package]
name = "splitvibe-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
splitvibe-core = { path = "../splitvibe-core" }

leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }

leptos_actix = { version = "0.7", optional = true }
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

tracing = "0.1"
dotenvy = { version = "0.15", optional = true }

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_actix",
    "dep:actix-web",
    "dep:actix-files",
    "dep:dotenvy",
]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]
